# grep_helpers3

./: .gitattributes  .gitignore  pyproject.toml
.claude/: settings.local.json
.claude/skills/: coding-conventions.md  writing-tests.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
docs/: PERFORMANCE.md
scripts/: fetch_ripgrep.py  gen_golden_case.py  gen_requirements_lock.py  probe_candidates.py
src/grep_analyzer/: __init__.py  __main__.py  automaton.py  budget.py  chase.py  classify.py  cli.py  decode_cache.py  ingest.py  (+16 more)
tests/: conftest.py  test_smoke.py
wheelhouse/: pyahocorasick-2.3.1-cp312-cp312-manylinux2014_aarch64.manylinux_2_17_aarch64.whl  pyahocorasick-2.3.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  tree_sitter-0.23.2-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  tree_sitter-0.23.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tree_sitter_c-0.23.4-cp39-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  tree_sitter_c-0.23.4-cp39-abi3-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tree_sitter_java-0.23.5-cp39-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  tree_sitter_javascript-0.23.1-cp39-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  tree_sitter_javascript-0.23.1-cp39-abi3-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tree_sitter_python-0.23.6-cp39-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  tree_sitter_typescript-0.23.2-cp39-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
(+294 files in other folders)
